Attention, Transformers, 시계열데이터분석

--- a/source/07_자연어 처리/ch6_RNN기반의Seq2Seq(스마트번역기).ipynb
+++ b/source/07_자연어 처리/ch6_RNN기반의Seq2Seq(스마트번역기).ipynb
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 2,
    "id": "b0288c19",
    "metadata": {},
    "outputs": [],
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "0e8abf2b",
    "metadata": {},
    "outputs": [
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "id": "b8c41b50",
    "metadata": {},
    "outputs": [
@@ -147,7 +147,7 @@
        "True"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "id": "a48b8100",
    "metadata": {},
    "outputs": [
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 8,
    "id": "e2a08c98",
    "metadata": {},
    "outputs": [
@@ -353,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 9,
    "id": "02d5af7e",
    "metadata": {},
    "outputs": [],
@@ -648,7 +648,9 @@
    "cell_type": "code",
    "execution_count": 50,
    "id": "d0483954",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -820,13 +822,7 @@
       "4/4 [==============================] - 0s 6ms/step - loss: 1.2369 - accuracy: 0.8485\n",
       "Epoch 83/500\n",
       "4/4 [==============================] - 0s 9ms/step - loss: 1.2141 - accuracy: 0.8424\n",
-      "Epoch 84/500\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 84/500\n",
       "4/4 [==============================] - 0s 6ms/step - loss: 1.1709 - accuracy: 0.8727\n",
       "Epoch 85/500\n",
       "4/4 [==============================] - 0s 7ms/step - loss: 1.1410 - accuracy: 0.8667\n",
@@ -1326,13 +1322,7 @@
       "4/4 [==============================] - 0s 6ms/step - loss: 5.8040e-06 - accuracy: 1.0000\n",
       "Epoch 327/500\n",
       "4/4 [==============================] - 0s 6ms/step - loss: 5.6274e-06 - accuracy: 1.0000\n",
-      "Epoch 328/500\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 328/500\n",
       "4/4 [==============================] - 0s 9ms/step - loss: 5.6010e-06 - accuracy: 1.0000\n",
       "Epoch 329/500\n",
       "4/4 [==============================] - 0s 5ms/step - loss: 5.2044e-06 - accuracy: 1.0000\n",
@@ -1654,13 +1644,7 @@
       "4/4 [==============================] - 0s 6ms/step - loss: 6.4662e-07 - accuracy: 1.0000\n",
       "Epoch 485/500\n",
       "4/4 [==============================] - 0s 9ms/step - loss: 6.3903e-07 - accuracy: 1.0000\n",
-      "Epoch 486/500\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 486/500\n",
       "4/4 [==============================] - 0s 6ms/step - loss: 6.3398e-07 - accuracy: 1.0000\n",
       "Epoch 487/500\n",
       "4/4 [==============================] - 0s 6ms/step - loss: 6.2603e-07 - accuracy: 1.0000\n",
@@ -1723,9 +1707,566 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "613b1e61",
+   "metadata": {},
+   "source": [
+    "## 📌"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "2ca1011e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from tensorflow.keras.models import load_model\n",
+    "model = load_model('data/seq2seq.h5')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "6fe46f93",
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[['cold', '감기'],\n",
+       " ['come', '오다'],\n",
+       " ['cook', '요리'],\n",
+       " ['copy', '복사'],\n",
+       " ['cost', '비용'],\n",
+       " ['date', '날짜'],\n",
+       " ['deal', '거래'],\n",
+       " ['deep', '깊은'],\n",
+       " ['desk', '책상'],\n",
+       " ['down', '아래'],\n",
+       " ['dust', '먼지'],\n",
+       " ['duty', '의무'],\n",
+       " ['each', '각각'],\n",
+       " ['east', '동쪽'],\n",
+       " ['easy', '쉽다'],\n",
+       " ['exit', '탈출'],\n",
+       " ['face', '얼굴'],\n",
+       " ['fact', '사실'],\n",
+       " ['fall', '가을'],\n",
+       " ['farm', '농장'],\n",
+       " ['feet', '다리'],\n",
+       " ['find', '찾다'],\n",
+       " ['fine', '좋다'],\n",
+       " ['fish', '생선'],\n",
+       " ['flow', '흐름'],\n",
+       " ['fund', '기금'],\n",
+       " ['gain', '수익'],\n",
+       " ['game', '놀이'],\n",
+       " ['gift', '선물'],\n",
+       " ['girl', '소녀'],\n",
+       " ['give', '주다'],\n",
+       " ['goal', '목적'],\n",
+       " ['gray', '회색'],\n",
+       " ['hair', '머리'],\n",
+       " ['harm', '피해'],\n",
+       " ['hell', '지옥'],\n",
+       " ['help', '도움'],\n",
+       " ['high', '높은'],\n",
+       " ['hole', '구멍'],\n",
+       " ['hope', '소망'],\n",
+       " ['hour', '시각'],\n",
+       " ['join', '합류'],\n",
+       " ['kiss', '키스'],\n",
+       " ['knee', '무릎'],\n",
+       " ['lady', '부인'],\n",
+       " ['late', '늦은'],\n",
+       " ['left', '왼쪽'],\n",
+       " ['life', '생명'],\n",
+       " ['loss', '손해'],\n",
+       " ['love', '사랑'],\n",
+       " ['luck', '행운'],\n",
+       " ['mail', '우편'],\n",
+       " ['male', '남자'],\n",
+       " ['many', '많은'],\n",
+       " ['meal', '식사'],\n",
+       " ['meat', '고기'],\n",
+       " ['menu', '메뉴'],\n",
+       " ['milk', '우유'],\n",
+       " ['name', '이름'],\n",
+       " ['news', '뉴스'],\n",
+       " ['next', '다음'],\n",
+       " ['once', '한번'],\n",
+       " ['pain', '고통'],\n",
+       " ['part', '부분'],\n",
+       " ['pick', '선택'],\n",
+       " ['pink', '핑크'],\n",
+       " ['plan', '계획'],\n",
+       " ['read', '읽다'],\n",
+       " ['rest', '휴식'],\n",
+       " ['ring', '반지'],\n",
+       " ['rock', '바위'],\n",
+       " ['roof', '지붕'],\n",
+       " ['root', '뿌리'],\n",
+       " ['rose', '장미'],\n",
+       " ['rule', '규칙'],\n",
+       " ['salt', '소금'],\n",
+       " ['sand', '모래'],\n",
+       " ['sell', '팔다'],\n",
+       " ['shop', '가게'],\n",
+       " ['sign', '싸인'],\n",
+       " ['size', '크기'],\n",
+       " ['skin', '피부'],\n",
+       " ['slow', '늦다'],\n",
+       " ['song', '노래'],\n",
+       " ['soon', '금방'],\n",
+       " ['tall', '크다'],\n",
+       " ['test', '시험'],\n",
+       " ['them', '그들'],\n",
+       " ['thin', '얇은'],\n",
+       " ['this', '이것'],\n",
+       " ['time', '시간'],\n",
+       " ['tiny', '작은'],\n",
+       " ['tool', '도구'],\n",
+       " ['tour', '관광'],\n",
+       " ['tree', '나무'],\n",
+       " ['trip', '여행'],\n",
+       " ['very', '매우'],\n",
+       " ['wave', '파도'],\n",
+       " ['weak', '약한'],\n",
+       " ['wear', '입다'],\n",
+       " ['west', '서쪽'],\n",
+       " ['when', '언제'],\n",
+       " ['wide', '넓은'],\n",
+       " ['wife', '아내'],\n",
+       " ['wind', '바람'],\n",
+       " ['wing', '날개'],\n",
+       " ['wish', '바램'],\n",
+       " ['wood', '나무'],\n",
+       " ['word', '단어'],\n",
+       " ['year', '연도']]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "eng_kor"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "92f0fe20",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((5, 4, 171), (5, 3, 171))"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 쉬운 문제\n",
+    "easy_test = [\n",
+    "    ['find','PP'], \n",
+    "    ['cold', 'PP'], \n",
+    "    ['desk', 'PP'], \n",
+    "    ['soon', 'PP'], \n",
+    "    ['love', 'PP']\n",
+    "]\n",
+    "enc_in, dec_in, dec_out = encoding(easy_test)\n",
+    "enc_in.shape, dec_in.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "6b4924c9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1/1 [==============================] - 0s 28ms/step\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(5, 3, 171)"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pred = model.predict([enc_in, dec_in]) #변수는 하나여야 하니 리스트로 넣는다\n",
+    "pred.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "77631679",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "find → 찾다 [148  60]\n",
+      "cold → 감기 [32 46]\n",
+      "desk → 책상 [149  97]\n",
+      "soon → 금방 [45 88]\n",
+      "love → 사랑 [96 66]\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(len(pred)):\n",
+    "    eng = easy_test[i][0]\n",
+    "    hat = pred[i].argmax(axis=-1)[:-1]\n",
+    "#    kor = alpha[hat[0]] + alpha[hat[0]]\n",
+    "    kor = ''.join([alpha[num] for num in hat])\n",
+    "    print(\"{} → {} {}\".format(eng, kor, hat))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "dff19820",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((9, 4, 171), (9, 3, 171))"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 어려운 문제 (철자 순서 )\n",
+    "hard_test = [\n",
+    "    ['love', 'PP'],\n",
+    "    ['lveo', 'PP'],\n",
+    "    ['leov', 'PP'],\n",
+    "    ['levo', 'PP'],\n",
+    "    ['lvoe', 'PP'],\n",
+    "    ['loev', 'PP'],\n",
+    "    ['elov', 'PP'],\n",
+    "    ['evol', 'PP'],\n",
+    "    ['lobe', 'PP']\n",
+    "]\n",
+    "enc_in, dec_in, _ = encoding(hard_test)\n",
+    "enc_in.shape, dec_in.shape"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2ca1011e",
+   "id": "e490085b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # 어려운 문제 (철자 순서 )\n",
+    "# hard_test = [\n",
+    "#     ['fnid', 'PP'],\n",
+    "#     ['codl', 'PP'],\n",
+    "#     ['dske', 'PP'],\n",
+    "#     ['noos', 'PP'],\n",
+    "#     ['lvoe', 'PP']\n",
+    "# ]\n",
+    "# enc_in, dec_in, _ = encoding(hard_test)\n",
+    "# enc_in.shape, dec_in.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "8559e7b5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 96,  66,   1],\n",
+       "       [ 96,  66,   1],\n",
+       "       [121,   1,   1],\n",
+       "       [ 96,   1,   1],\n",
+       "       [ 96,  66,   1],\n",
+       "       [ 96,  66,   1],\n",
+       "       [ 60,  60,   1],\n",
+       "       [ 62,  96,   1],\n",
+       "       [ 96,  66,   1]], dtype=int64)"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pred = model.predict([enc_in, dec_in], verbose=0).argmax(axis=-1)\n",
+    "pred"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "55052c46",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "love → 사랑 [96 66]\n",
+      "lveo → 사랑 [96 66]\n",
+      "leov → 왼E [121   1]\n",
+      "levo → 사E [96  1]\n",
+      "lvoe → 사랑 [96 66]\n",
+      "loev → 사랑 [96 66]\n",
+      "elov → 다다 [60 60]\n",
+      "evol → 도사 [62 96]\n",
+      "lobe → 사랑 [96 66]\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(len(pred)):\n",
+    "    eng = hard_test[i][0]\n",
+    "    kor = ''.join([alpha[num] for num in pred[i]])\n",
+    "    print(\"{} → {} {}\".format(eng, kor[:-1], pred[i][:-1]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "aca7d4c3",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2bfcc29d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c8f64362",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e28f3de4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "512a0f6e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9241a8a8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0786a67f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "aeaa0d83",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ddbc56a4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "34c5c8c6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "21644149",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a4a5725a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f095bf4c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e228aa85",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b9cf8eb9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "59f88f9c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bb246a72",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c751f6cc",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "db839184",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "351c2c0f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c1317183",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b731ddc0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b5dbb942",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cee34685",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "259e0141",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "04c4c221",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b753cd90",
    "metadata": {},
    "outputs": [],
    "source": []
